--- a/Lab1/Lab1/Lab1.csproj
+++ b/Lab1/Lab1/Lab1.csproj
@@ -43,8 +43,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Components\Battery.cs" />
+    <Compile Include="Components\ColourScreen.cs" />
+    <Compile Include="Components\IlluminatedKeyboard.cs" />
+    <Compile Include="Components\IScreenImage.cs" />
+    <Compile Include="Components\Keyboard.cs" />
+    <Compile Include="Components\MonochromeScreen.cs" />
+    <Compile Include="Components\OLEDScreen.cs" />
+    <Compile Include="Components\RetinaScreen.cs" />
+    <Compile Include="Components\ScreenBase.cs" />
+    <Compile Include="Components\Simcard.cs" />
+    <Compile Include="Components\VirtualKeyboard.cs" />
+    <Compile Include="MobilePhone.cs" />
+    <Compile Include="Nokia3310.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimCorpMobile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
