IPLayback interface added Playback devices added

--- a/Lab1/Lab1/Lab1.csproj
+++ b/Lab1/Lab1/Lab1.csproj
@@ -46,7 +46,7 @@
     <Compile Include="Components\Battery.cs" />
     <Compile Include="Components\Screens\ColourScreen.cs" />
     <Compile Include="Components\Keyboards\IlluminatedKeyboard.cs" />
-    <Compile Include="Components\Screens\IScreenImage.cs" />
+    <Compile Include="Components\IScreenImage.cs" />
     <Compile Include="Components\Keyboards\Keyboard.cs" />
     <Compile Include="Components\Screens\MonochromeScreen.cs" />
     <Compile Include="Components\Screens\OLEDScreen.cs" />
@@ -55,6 +55,10 @@
     <Compile Include="Components\Simcard.cs" />
     <Compile Include="MobilePhones\MobilePhone.cs" />
     <Compile Include="MobilePhones\Nokia3310.cs" />
+    <Compile Include="PlaybackDevices\IphoneOriginalHeadphones.cs" />
+    <Compile Include="Components\IPlayback.cs" />
+    <Compile Include="PlaybackDevices\PhoneSpeaker.cs" />
+    <Compile Include="PlaybackDevices\UnofficialHeadset.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="MobilePhones\SimCorpMobile.cs" />
