--- a/Lab1/Lab1/MobilePhoneApp.csproj
+++ b/Lab1/Lab1/MobilePhoneApp.csproj
@@ -43,7 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Chargers\IphoneCharger.cs" />
     <Compile Include="Components\Battery.cs" />
+    <Compile Include="Components\ICharge.cs" />
     <Compile Include="Components\Screens\ColourScreen.cs" />
     <Compile Include="Components\Keyboards\IlluminatedKeyboard.cs" />
     <Compile Include="Components\IScreenImage.cs" />
