--- a/Lab1/Lab1/MobilePhoneApp.csproj
+++ b/Lab1/Lab1/MobilePhoneApp.csproj
@@ -44,6 +44,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Chargers\IphoneCharger.cs" />
+    <Compile Include="Chargers\SmartCharger.cs" />
+    <Compile Include="Chargers\UniversalChinaCharger.cs" />
     <Compile Include="Components\Battery.cs" />
     <Compile Include="Components\ICharge.cs" />
     <Compile Include="Components\Screens\ColourScreen.cs" />
@@ -57,6 +59,7 @@
     <Compile Include="Components\Simcard.cs" />
     <Compile Include="MobilePhones\MobilePhone.cs" />
     <Compile Include="MobilePhones\Nokia3310.cs" />
+    <Compile Include="OtherDevices\CarAudio.cs" />
     <Compile Include="PlaybackDevices\IphoneOriginalHeadphones.cs" />
     <Compile Include="Components\IPlayback.cs" />
     <Compile Include="PlaybackDevices\PhoneSpeaker.cs" />
