--- a/Lab1/MobilePhoneCommonTests/MobilePhoneCommonTests.csproj
+++ b/Lab1/MobilePhoneCommonTests/MobilePhoneCommonTests.csproj
@@ -51,6 +51,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Chargers\IphoneChargerTests.cs" />
     <Compile Include="FakeIOutput.cs" />
     <Compile Include="PlaybackDevices\IphoneOriginalHeadphonesTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
