--- a/Lab3/SMSApp/SMSApp.csproj
+++ b/Lab3/SMSApp/SMSApp.csproj
@@ -4,15 +4,17 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5E89F0DB-7215-40C5-862E-DA344B960D40}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{4EEE18EC-F1E4-460F-BA29-73B130B5BF4A}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MobilePhoneCommon</RootNamespace>
-    <AssemblyName>MobilePhoneCommon</AssemblyName>
+    <RootNamespace>SMSApp</RootNamespace>
+    <AssemblyName>SMSApp</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -22,6 +24,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -36,35 +39,52 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Chargers\IphoneCharger.cs" />
-    <Compile Include="Chargers\SmartCharger.cs" />
-    <Compile Include="Chargers\UniversalChinaCharger.cs" />
-    <Compile Include="Components\Battery.cs" />
-    <Compile Include="ICharge.cs" />
-    <Compile Include="IOutput.cs" />
-    <Compile Include="IPlayback.cs" />
-    <Compile Include="IScreenImage.cs" />
-    <Compile Include="Components\Keyboards\IlluminatedKeyboard.cs" />
-    <Compile Include="Components\Keyboards\Keyboard.cs" />
-    <Compile Include="Components\Screens\ColourScreen.cs" />
-    <Compile Include="Components\Screens\MonochromeScreen.cs" />
-    <Compile Include="Components\Screens\OLEDScreen.cs" />
-    <Compile Include="Components\Screens\RetinaScreen.cs" />
-    <Compile Include="Components\Screens\ScreenBase.cs" />
-    <Compile Include="Components\Simcard.cs" />
-    <Compile Include="MobilePhones\MobilePhone.cs" />
-    <Compile Include="MobilePhones\Nokia3310.cs" />
-    <Compile Include="MobilePhones\SimCorpMobile.cs" />
-    <Compile Include="MobilePhones\SMSProvider.cs" />
-    <Compile Include="OtherDevices\CarAudio.cs" />
-    <Compile Include="PlaybackDevices\IphoneOriginalHeadphones.cs" />
-    <Compile Include="PlaybackDevices\PhoneSpeaker.cs" />
-    <Compile Include="PlaybackDevices\UnofficialHeadset.cs" />
+    <Compile Include="ConsoleOutput.cs" />
+    <Compile Include="SMSApp.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SMSApp.Designer.cs">
+      <DependentUpon>SMSApp.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="SMSApp.resx">
+      <DependentUpon>SMSApp.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MobilePhoneCommon\MobilePhoneCommon.csproj">
+      <Project>{5e89f0db-7215-40c5-862e-da344b960d40}</Project>
+      <Name>MobilePhoneCommon</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
