--- a/Lab3/SMSApp/SMSApp.csproj
+++ b/Lab3/SMSApp/SMSApp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConsoleOutput.cs" />
+    <Compile Include="Formatting.cs" />
     <Compile Include="SMSApp.cs">
       <SubType>Form</SubType>
     </Compile>
