new Message class new RandomMessage generator

--- a/Lab4/MobilePhoneCommon/MobilePhoneCommon.csproj
+++ b/Lab4/MobilePhoneCommon/MobilePhoneCommon.csproj
@@ -59,7 +59,9 @@
     <Compile Include="MobilePhones\MobilePhone.cs" />
     <Compile Include="MobilePhones\Nokia3310.cs" />
     <Compile Include="MobilePhones\SimCorpMobile.cs" />
-    <Compile Include="MobilePhones\SMSProvider.cs" />
+    <Compile Include="SMS\Message.cs" />
+    <Compile Include="SMS\RandomMessageGenerator.cs" />
+    <Compile Include="SMS\SMSProvider.cs" />
     <Compile Include="OtherDevices\CarAudio.cs" />
     <Compile Include="PlaybackDevices\IphoneOriginalHeadphones.cs" />
     <Compile Include="PlaybackDevices\PhoneSpeaker.cs" />
